--- a/DataBase/docker-compose.yml
+++ b/DataBase/docker-compose.yml
@@ -2,27 +2,12 @@ version: "3"
 
 services:
   mysql:
-    build: .
     container_name: mysql
-    restart: always
+    image: mysql:5.7
+    volumes:
+    - ./sql-data/db:var/lib/mysql
     ports: 
     - 3336:3306
     environment:
       MYSQL_ROOT_PASSWORD: "JXr-t/hx84"
       MYSQL_DATABASE: "db_test"
-    volumes:
-    - ./schemas:/var/lib/mysql:rw
-    networks:
-      mysql_network:
-        aliases:
-          - mysql_host
-volumes:
-  schemas: {}
-networks:
-  mysql_network:
-    name: mysql_net
-    driver: bridge
-
-
-
-
