--- a/DataBase/docker-compose.yml
+++ b/DataBase/docker-compose.yml
@@ -4,8 +4,9 @@ services:
   mysql:
     container_name: mysql
     image: mysql:5.7
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
-    - ./sql-data/db:var/lib/mysql
+    - ./mysql-data/db:var/lib/mysql
     ports: 
     - 3336:3306
     environment:
