--- a/DataBase/docker-compose.yml
+++ b/DataBase/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     volumes:
-    - ./mysql-data/db:var/lib/mysql
+    - ./mysql-data:/var/lib/mysql
     ports:
     - 3336:3306
     environment:
